# haskelltester

./: CHANGELOG.md  LICENSE  README.md  ReportError.hs  gradescope.cabal  hw.mk  run_autograder  setup.sh  stack.yaml
src/: Gradescope.hs  ReportError.hs  TestData.hs  Tester.hs
