cabal-version:       >=1.10

name:                gradescope
version:             0.0.1
-- synopsis:
-- description:
-- bug-reports:
license:             BSD3
license-file:        LICENSE
author:              Richard Eisenberg, Stephanie Weirich
maintainer:          sweirich@cis.upenn.edu
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Gradescope, TestData, Tester
  -- other-modules:
  other-extensions:    DeriveAnyClass
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , OverloadedStrings
                     , LambdaCase
                     , ScopedTypeVariables
                     , RecordWildCards
  build-depends:       base >=4 && <5
                     , aeson >=1.4 
                     , text >=1.2
                     , bytestring >=0.10
                     , unordered-containers >=0.2 
                     , syb >=0.7
                     , HUnit >= 1.6
                     , QuickCheck >=2.8 && < 3
                     , yaml >= 0.11
                     , directory >= 1.3

  hs-source-dirs:      src

  default-language:    GHC2021
